[package]
name = "coolwallpaperbackend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.4", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }              # For JSON serialization
serde_json = "1.0"                                              # For handling JSON responses
bcrypt = "0.12.0"                                               # Bcrypt for password hashing
rand = "0.8"                                                    # For generating random salts
